9/2/12
  Remove input focus from current window when changing monitors

5/2/13
  Overlap master/stack borders in vertical & horizontal tiling modes
  With multiple monitors when click to focus window on unfocused
   screen warp cursor

27/1/13
  Fix for booting into horizontal mode failing to map windows
   correctly

16/1/13
  Fix for multi monitor pointer warping when clicking on the bar
  Fix for bar not updating in multi monitor mode when switching
   mode on monitor without bar

14/12/12
  update_current() after destroynotify()

6/12/12
  Don't warp the pointer when clicking an unfocused
   window on an unfocused monitor

5/12/12
  Fix for window mapping with multiple monitors

4/12/12
  Added option in rc.conf to center windows or not
   in stacking mode # for gimp windows etc

1/12/12
  Fix for window size with toggle_bar()
  Fix for fullscreen window unmapping when window
   opens on a different desktop
  Fix for window mapping when using update_config
   and mode changes from fullscreen

30/11/12
  Added Control to keyboard shortcuts mods

30/11/12
  Fix for swapping master with no open windows crash

27/11/18
  Added back behaviour in grid mode with three or
   four windows open i.e they all move with Alt+h/l/p/o

18/11/12
  Fix for bar not showing on 2nd monitor at startup

14/11/12
  Fix for bar toggling messing with window heights

17/10/12
  Fix for toggle_bar() with BAR_MONITOR
  changed remove_window() to remove client

16/10/12
  Added option in rc.conf to select monitor bar is on

11/10/12
  Changed the DEFAULTMODE line in rc.conf
    to set the default mode for each desktop

10/10/12
  Added multi monitor support

24/9/12
  Fix for existing window/s not being unmapped in
    fullscreen mode when new window added
  Bar is toggled on a per desktop basis

22/9/12
  Added AltSuper for Mod key combo

21/9/12
  In stacking mode have border on first opened window

20/9/12
  Allow moving transient window
  Be a bit friendlier with transient windows