@@ -34,6 +34,10 @@ CENTER_STACK 0
 DEFAULTMODE 3;4;0;1;2;3;
 # Select monitor the bar will be on, not needed with one monitor
 # BAR_MONITOR 1
+# Change from stacking mode to new mode when reaching this many
+# open windows - Off by default
+#AUTO_NUM_OPEN 4
+#AUTO_MODE 3
 # For semi transparent unfocused windows if using a compositor e.g. compton
 UF_WIN_ALPHA 65
 # only one of FOLLOWMOUSE and CLICKTOFOCUS should be zero, but none have to be
